NetBSD Problem Report #45827

From woods@once.weird.com  Thu Jan 12 23:10:42 2012
Return-Path: <woods@once.weird.com>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 1E29A63BCAE
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 12 Jan 2012 23:10:42 +0000 (UTC)
Message-Id: <m1RlTn1-001ECEC@once.weird.com>
Date: Thu, 12 Jan 2012 15:10:35 -0800 (PST)
From: "Greg A. Woods" <woods@planix.ca>
Sender: "Greg A. Woods" <woods@once.weird.com>
Reply-To: "Greg A. Woods" <woods@planix.ca>
To: gnats-bugs@gnats.NetBSD.org
Subject: panic: LOCKDEBUG (Reader / writer lock error: lockdebug_unlocked: no shared locks held by LWP)
X-Send-Pr-Version: 3.95

>Number:         45827
>Category:       kern
>Synopsis:       panic: LOCKDEBUG (Reader / writer lock error: lockdebug_unlocked: no shared locks held by LWP)
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Jan 12 23:15:00 +0000 2012
>Closed-Date:    Sat Jan 28 12:36:48 +0000 2012
>Last-Modified:  Sun Feb 05 12:35:07 +0000 2012
>Originator:     Greg A. Woods
>Release:        NetBSD 5.1_STABLE (2012/01/08)
>Organization:
Planix, Inc.; Kelowna, BC; Canada
>Environment:
System: NetBSD more 5.1_STABLE NetBSD 5.1_STABLE (GENERIC) #3: Sun Jan  8 21:53:14 PST 2012  woods@once:/rest/build/woods/once/netbsd-5-i386-i386-ppro-obj/rest/work/woods/m-NetBSD-5/sys/arch/i386/compile/GENERIC i386
Architecture: i386
Machine: i386
>Description:

	My shiny new-to-me Dell PE2950 (dual quad-core 32GB) system died
	with the following panic during its first real load testing:

	("build.sh j 4" -- it was still in the middle of building tools)

Reader / writer lock error: lockdebug_unlocked: no shared locks held by LWP

lock address : 0x00000000c0d53cc0 type     :     sleep/adaptive
initialized  : 0x00000000c04e0c43
shared holds :                  0 exclusive:                  0
shares wanted:                  0 exclusive:                  0
current cpu  :                  3 last held:              65535
current lwp  : 0x00000000de918d20 last held: 000000000000000000
last locked  : 0x00000000c04e02e1 unlocked : 0x00000000c04e04d2
owner/count  : 000000000000000000 flags    : 0x0000000000000008

Turnstile chain at 0xc0d54200.
=> No active turnstile for this lock.

panic: LOCKDEBUG
Begin traceback...
WARNING: SPL NOT LOWERED ON SYSCALL EXIT
copyright(d6f23503,0,0,de721cf4,d6f23e40,d6f23dd8,c0d53cc0,c0c3c0d8,0,c04e02e1) at 0xc0b91150
Bad frame pointer: 0xd6f23540
End traceback...

dumping to dev 4,1 offset 96479359
dump 150 149 148 147 146 WARNING: SPL NOT LOWERED ON SYSCALL EXIT
145 144 143 142 141 140 139 138 137 136 135 134 133 132 131 130 129 128 127 126 125 124 123 122 121 120 119 118 117 116 115 114 113 112 111 110 109 108 107 106 105 104 103 102 101 100 99 98 97 96 95 94 93 92 91 90 89 88 87 86 85 84 83 82 81 80 79 78 77 76 75 74 73 72 71 70 69 68 67 66 65 64 63 62 61 60 59 58 57 56 55 54 53 52 51 50 49 48 47 46 45 44 43 42 41 40 39 38 37 36 35 34 33 32 31 30 WARNING: SPL NOT LOWERED ON SYSCALL EXIT
29 28 27 26 25 24 23 22 21 20 19 18 17 16 15 14 13 12 11 10 9 8 7 6 5 4 3 2 1 succeeded


[[....]]

Checking for core dump...
savecore: reboot after panic: panic: LOCKDEBUG
savecore: system went down at Thu Jan 12 12:08:59 2012
savecore: /var/crash/bounds: No such file or directory
savecore: writing compressed core to /var/crash/netbsd.0.core.gz
savecore: writing compressed kernel to /var/crash/netbsd.0.gz
savecore: (null): Bad address



# gdb ~woods/tmp/netbsd.gdb /var/crash/netbsd.0.core                                                                               
GNU gdb 6.5
Copyright (C) 2006 Free Software Foundation, Inc.
GDB is free software, covered by the GNU General Public License, and you are
welcome to change it and/or distribute copies of it under certain conditions.
Type "show copying" to see the conditions.
There is absolutely no warranty for GDB.  Type "show warranty" for details.
This GDB was configured as "i386--netbsdelf"...
"/var/crash/netbsd.0.core" is not a core dump: File format not recognized
(gdb) target kvm
#0  0xc04de9c9 in mi_switch (l=0xc0c3bd80) at /rest/work/woods/m-NetBSD-5/sys/kern/kern_synch.c:767
767     /rest/work/woods/m-NetBSD-5/sys/kern/kern_synch.c: No such file or directory.
        in /rest/work/woods/m-NetBSD-5/sys/kern/kern_synch.c
(gdb) where
#0  0xc04de9c9 in mi_switch (l=0xc0c3bd80) at /rest/work/woods/m-NetBSD-5/sys/kern/kern_synch.c:767
#1  0xc04dac1b in sleepq_block (timo=0, catch=false) at /rest/work/woods/m-NetBSD-5/sys/kern/kern_sleepq.c:269
#2  0xc04b4f4c in cv_wait (cv=0xc0d50544, mtx=0xc0d508d8) at /rest/work/woods/m-NetBSD-5/sys/kern/kern_condvar.c:201
#3  0xc0462877 in uvm_scheduler () at /rest/work/woods/m-NetBSD-5/sys/uvm/uvm_glue.c:550
#4  0xc04a972a in main () at /rest/work/woods/m-NetBSD-5/sys/kern/init_main.c:682
(gdb) 

	My version of kern_synch.c has a couple of wee changes related
	to my SYSCALL_STATS experiments so that line number is here:

		/* Switch to the new LWP.. */
767:		prevlwp = cpu_switchto(l, newl, returning);
		ci = curcpu();

	So far as I can tell my changes would not have affected anything
	which should cause this panic.  Indeed this same code ran well
	(though under far less demanding load) on a 2-CPU VirtualBox
	machine for several weeks.

	I can make the kernel image and it's core available, or do any
	other debugging as desired.

	Note I only see that "WARNING: SPL NOT LOWERED ON SYSCALL EXIT"
	message in the panic traceback and in the dump run -- never any
	other time.

>How-To-Repeat:

	run "build.sh -j 4" on an 8-CPU machine

>Fix:

>Release-Note:

>Audit-Trail:
From: "Greg A. Woods" <woods@planix.ca>
To: NetBSD GNATS <gnats-bugs@NetBSD.org>
Cc: 
Subject: Re: kern/45827: panic: LOCKDEBUG (Reader / writer lock error: lockdebug_unlocked: no shared locks held by LWP)
Date: Sun, 22 Jan 2012 15:51:30 -0800

 Most interesting looking crash to date, this one moments after starting
 a "build.sh -j 6" run (but after the machine had been up for two days,
 but running mostly idle):

 Reader / writer lock error: lockdebug_unlocked: no shared locks held by LWP

 lock address : 0x00000000c0d52cc0 type     :     sleep/adaptive
 initialized  : 0x00000000c04e0af3
 shared holds :                  0 exclusive:                  0
 shares wanted:                  0 exclusive:                  0
 current cpu  :                  2 last held:              65535
 current lwp  : 0x00000000df8865c0 last held: 000000000000000000
 last locked  : 0x00000000c04e0191 unlocked : 0x00000000c04e0382
 owner/count  : 000000000000000000 flags    : 0x0000000000000008

 Turnstile chain at 0xc0d53200.
 => No active turnstile for this lock.

 panic: LOCKDEBUG
 fatal breakpoint trap in supervisor mode
 trap type 1 code 0 eip c05cc07c cs 8 eflags 246 cr2 bbb18000 ilevel 0
 Stopped in pid 10183.1 (systat) at      netbsd:breakpoint+0x4:  popl    %ebp
 db{2}> 
 db{2}> trace
 breakpoint(c0bfdf42,de63dac8,c3397800,c04fc76f,0,1,0,0,de63dac8,8) at netbsd:breakpoint+0x4
 panic(c0b90308,c0b8d22f,c093610b,c0b90368,c04e0382,18865c0,0,8,1,c0d52cc0) at netbsd:panic+0x1b0
 lockdebug_abort1(c0b90368,1,1,c0d5c120,0,0,c0d5c120,c3b14634,68,7fffffff) at netbsd:lockdebug_abort1+0xbb
 rw_vector_exit(c0d52cc0,68,de63dc0c,c0533bd5,0,bbb94050,68,1,c053e708,df8865c0) at netbsd:rw_vector_exit+0xc8
 sysctl_unlock(0,bbb94050,68,1,c053e708,df8865c0,0,18,1,dc553c2c) at netbsd:sysctl_unlock+0x12
 sysctl_dobuf(de63dca4,4,bbb55000,de63dccc,0,0,de63dc9c,df8865c0,c336c980,0) at netbsd:sysctl_dobuf+0xc5
 sysctl_dispatch(de63dc9c,6,bbb55000,de63dccc,0,0,de63dc9c,df8865c0,c336c980,0) at netbsd:sysctl_dispatch+0xcf
 sys___sysctl(df8865c0,de63dd00,de63dd28,de63dd40,c05b8a80,dceb3424,ca,bfbfdf2c,6,bbb55000) at netbsd:sys___sysctl+0xd6
 syscall(de63dd48,b3,ab,1f,1f,bfbfdf2c,bbb55000,bfbfde88,0,6) at netbsd:syscall+0xcf
 db{2}> machine cpu 0
 using CPU 0
 db{2}> trace
 x86_mwait(0,0,0,c04d4502,cc608c80,cc605ec0,d6f2cd2c,c04c0896,0,0) at netbsd:x86_mwait+0xc
 x86_cpu_idle_mwait(0,0,c04c66c9,0,0,0,c0c3dd48,cc608c80,c04c0710,cc608c80) at netbsd:x86_cpu_idle_mwait+0x4e
 idle_loop(cc608c80,0,c01002cd,0,c01002cd,0,0,0,0,0) at netbsd:idle_loop+0x186
 db{2}> machine cpu 1
 using CPU 1
 db{2}> trace
 copyout(df7b828c,dbb71000,bbb6b000,2000,df7b828c,0,dbb71000,14000,0,dbb71000) at netbsd:copyout+0x33
 uiomove(dbb71000,2000,dfbacc7c,dfbacb1c,0,101,dfbacb8c,dc440090,d743a5b4,0) at netbsd:uiomove+0x62
 ubc_uiomove(de97b510,dfbacc7c,4000,0,101,0,0,0,0,0) at netbsd:ubc_uiomove+0xeb
 ffs_read(dfbacc04,0,c0937960,de97b510,1,20001,dfbacc1c,c0549d18,c0937420,de97b510) at netbsd:ffs_read+0x45b
 VOP_READ(de97b510,dfbacc7c,0,cc607c00,35,5e5f22,0,16,4000,bbb6b000) at netbsd:VOP_READ+0x6c
 vn_read(dc4e1080,dc4e1080,dfbacc7c,cc607c00,1,bbb13290,0,df7b828c,bba32000,1000) at netbsd:vn_read+0x93
 dofileread(35,dc4e1080,bbb6b000,4000,dc4e1080,1,dfbacd28,dfb6ea20,dfb6ea20,0) at netbsd:dofileread+0x75
 sys_read(dfb6ea20,dfbacd00,dfbacd28,bba32010,bba32000,df7b828c,3,35,bbb6b000,4000) at netbsd:sys_read+0x6f
 syscall(dfbacd48,b3,ab,1f,1f,0,0,bfbfc338,8129f28,35) at netbsd:syscall+0xcf
 db{2}> machine cpu 2
 using CPU 2
 db{2}> trace
 breakpoint(c0bfdf42,de63dac8,c3397800,c04fc76f,0,1,0,0,de63dac8,8) at netbsd:breakpoint+0x4
 panic(c0b90308,c0b8d22f,c093610b,c0b90368,c04e0382,18865c0,0,8,1,c0d52cc0) at netbsd:panic+0x1b0
 lockdebug_abort1(c0b90368,1,1,c0d5c120,0,0,c0d5c120,c3b14634,68,7fffffff) at netbsd:lockdebug_abort1+0xbb
 rw_vector_exit(c0d52cc0,68,de63dc0c,c0533bd5,0,bbb94050,68,1,c053e708,df8865c0) at netbsd:rw_vector_exit+0xc8
 sysctl_unlock(0,bbb94050,68,1,c053e708,df8865c0,0,18,1,dc553c2c) at netbsd:sysctl_unlock+0x12
 sysctl_dobuf(de63dca4,4,bbb55000,de63dccc,0,0,de63dc9c,df8865c0,c336c980,0) at netbsd:sysctl_dobuf+0xc5
 sysctl_dispatch(de63dc9c,6,bbb55000,de63dccc,0,0,de63dc9c,df8865c0,c336c980,0) at netbsd:sysctl_dispatch+0xcf
 sys___sysctl(df8865c0,de63dd00,de63dd28,de63dd40,c05b8a80,dceb3424,ca,bfbfdf2c,6,bbb55000) at netbsd:sys___sysctl+0xd6
 syscall(de63dd48,b3,ab,1f,1f,bfbfdf2c,bbb55000,bfbfde88,0,6) at netbsd:syscall+0xcf
 db{2}> machine cpu 4   
 using CPU 4
 db{2}> trace
 x86_mwait(0,0,0,c04d4502,cc61ad20,cc605c40,d7371d20,c04c0896,0,0) at netbsd:x86_mwait+0xc
 x86_cpu_idle_mwait(0,0,0,0,0,0,c3398848,40,d7371da0,c0c3ed38) at netbsd:x86_cpu_idle_mwait+0x4e
 idle_loop(0,c04c0710,cc61ad20,c01002d0,0,c01002cd,0,c01002cd,0,0) at netbsd:idle_loop+0x186
 Bad frame pointer: 0xcc61ad20
 db{2}> machine cpu 5 
 using CPU 5
 db{2}> trace
 ?(0,0,0,0,0,0,0,0,0,0) at 0x80a863e
 db{2}> machine cpu 6
 using CPU 6
 db{2}> trace
 logputchar(57,dfa35cc0,dfaa2c7c,cc607c00,1,1bfdac2,1,c010cdb9,3f4c,0) at netbsd:logputchar+0x28
 putchar(df92e83c,1000,ffffffff,0,df85cd54,0,dfaa2d48,0,e0,df85cd54) at netbsd:putchar+0xda
 kprintf(c010cdb9,5,0,0,dfaa2d48,29e0,0,0,dfaa2d48,0) at netbsd:kprintf+0x217
 printf(c010cdb9,b3,ab,1f,1f,bb67d000,3f4c,bfbfc668,bbb100d0,bb67b008) at netbsd:printf+0x4b
 db{2}> machine cpu 7
 using CPU 7
 db{2}> trace
 x86_mwait(0,0,0,c04d4502,d7420c80,cc605ac0,d7405d20,c04c0896,0,0) at netbsd:x86_mwait+0xc
 x86_cpu_idle_mwait(0,0,0,0,0,0,c339a048,40,d7405da0,c0c3ed38) at netbsd:x86_cpu_idle_mwait+0x4e
 idle_loop(0,c04c0710,d7420c80,c01002d0,0,c01002cd,0,c01002cd,0,0) at netbsd:idle_loop+0x186
 _prop_array_pool(0,c339a000,cc605ac0,0,d7405da0,d7405d38,0,0,0,0) at 0xc339a000
 db{2}> 

 -- 
 						Greg A. Woods
 						Planix, Inc.

 <woods@planix.com>       +1 250 762-7675        http://www.planix.com/

From: "Greg A. Woods" <woods@planix.ca>
To: NetBSD GNATS <gnats-bugs@NetBSD.org>
Cc: 
Subject: Re: kern/45827: panic: LOCKDEBUG (Reader / writer lock error: lockdebug_unlocked: no shared locks held by LWP)
Date: Wed, 25 Jan 2012 22:39:16 -0800

 I think I can now confirm this issue is almost certainly related to
 something in the sysctl() path.

 I've now done a couple of successful "build.sh" runs on both the PE2950
 and the HP EliteBook, while resisting the urge to watch the system with
 "top" and/or "systat" and there have been no crashes.

 Just for fun I then ran a "build.sh -j 3" on my VirtualBox test system,
 and ran "systat -w 1 vm" in another window on it and in short order I
 was greeted with the following on its serial console:

 (note, FYI, I had ddb.onpanic=2 and see how the "automatic" stack
 backtrace fails miserably)

 Reader / writer lock error: lockdebug_unlocked: no shared locks held by LWP

 lock address : 0x00000000c0d52cc0 type     :     sleep/adaptive
 initialized  : 0x00000000c04e0af3
 shared holds :                  0 exclusive:                  0
 shares wanted:                  0 exclusive:                  0
 current cpu  :                  0 last held:              65535
 current lwp  : 0x00000000d83dd280 last held: 000000000000000000
 last locked  : 0x00000000c04e0191 unlocked : 0x00000000c04e0382
 owner/count  : 000000000000000000 flags    : 0x0000000000000008

 Turnstile chain at 0xc0d53200.
 => No active turnstile for this lock.

 panic: LOCKDEBUG
 Begin traceback...
 copyright(d6ee8503,0,0,d7f627f4,d6ee8e40,d6ee8dd8,c0d52cc0,c0c3b0dc,0,c04e0191) at 0xc0b90608
 Bad frame pointer: 0xd6ee8540
 End traceback...
 fatal breakpoint trap in supervisor mode
 trap type 1 code 0 eip c05cc07c cs 8 eflags 246 cr2 bbb5d000 ilevel 0
 Stopped in pid 1178.1 (systat) at       netbsd:breakpoint+0x4:  popl    %ebp
 db{0}> trace
 breakpoint(c0b916ab,1,ffff,c0bfe82c,c04fc4b0,1,0,0,d84a6ac8,8) at netbsd:breakpoint+0x4
 panic(c0b905a8,c0b8d4cf,c09363ab,c0b90608,c04e0382,13dd280,0,8,1,c0d52cc0) at netbsd:panic+0x1b0
 lockdebug_abort1(c0b90608,1,1,c0d5c120,0,0,c0d5c120,c3598220,68,7fffffff) at netbsd:lockdebug_abort1+0xbb
 rw_vector_exit(c0d52cc0,68,d84a6c0c,c0533bd5,0,bbbdba98,68,1,c053e708,d83dd280) at netbsd:rw_vector_exit+0xc8
 sysctl_unlock(0,bbbdba98,68,1,c053e708,d83dd280,0,18,1,d801eb74) at netbsd:sysctl_unlock+0x12
 sysctl_dobuf(d84a6ca4,4,bbb54000,d84a6ccc,0,0,d84a6c9c,d83dd280,c333d980,0) at netbsd:sysctl_dobuf+0xc5
 sysctl_dispatch(d84a6c9c,6,bbb54000,d84a6ccc,0,0,d84a6c9c,d83dd280,c333d980,0) at netbsd:sysctl_dispatch+0xcf
 sys___sysctl(d83dd280,d84a6d00,d84a6d28,14a6d40,d83dd280,c0c3dd00,ca,bfbfdf3c,6,bbb54000) at netbsd:sys___sysctl+0xd6
 syscall(d84a6d48,b3,ab,1f,1f,bfbfdf3c,bbb54000,bfbfde98,0,6) at netbsd:syscall+0xcf
 db{0}> call _kernel_lock_dump
 curcpu holds :                  0 wanted by: 000000000000000000
 0x40
 db{0}> machine cpu 1
 using CPU 1
 db{0}> trace
 x86_stihlt(0,0,0,0,0,0,c3334048,40,d7297da0,c0c3ed38) at netbsd:x86_stihlt+0x5
 idle_loop(0,c04c0710,cc613cc0,c01002d0,0,c01002cd,0,c01002cd,0,0) at netbsd:idle_loop+0x186
 Bad frame pointer: 0xcc613cc0
 db{0}> call _kernel_lock_dump
 curcpu holds :                  0 wanted by: 000000000000000000
 0x40
 db{0}> 

 -- 
 						Greg A. Woods
 						Planix, Inc.

 <woods@planix.com>       +1 250 762-7675        http://www.planix.com/

State-Changed-From-To: open->feedback
State-Changed-By: rmind@NetBSD.org
State-Changed-When: Thu, 26 Jan 2012 19:19:34 +0000
State-Changed-Why:
Fixed?


From: "Mindaugas Rasiukevicius" <rmind@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/45827 CVS commit: src/sys/kern
Date: Thu, 26 Jan 2012 19:18:25 +0000

 Module Name:	src
 Committed By:	rmind
 Date:		Thu Jan 26 19:18:25 UTC 2012

 Modified Files:
 	src/sys/kern: vfs_bio.c

 Log Message:
 sysctl_dobuf: re-acquire the sysctl lock on retry path.  PR/45827.


 To generate a diff of this commit:
 cvs rdiff -u -r1.232 -r1.233 src/sys/kern/vfs_bio.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Greg A. Woods" <woods@planix.ca>
To: NetBSD GNATS <gnats-bugs@NetBSD.org>
Cc: 
Subject: Re: kern/45827 (panic: LOCKDEBUG (Reader / writer lock error: lockdebug_unlocked: no shared locks held by LWP))
Date: Fri, 27 Jan 2012 19:03:57 -0800

 At Thu, 26 Jan 2012 19:19:37 +0000 (UTC), rmind@NetBSD.org wrote:
 Subject: Re: kern/45827 (panic: LOCKDEBUG (Reader / writer lock error: lockdebug_unlocked: no shared locks held by LWP))
 > 
 > Synopsis: panic: LOCKDEBUG (Reader / writer lock error: lockdebug_unlocked: no shared locks held by LWP)
 > 
 > State-Changed-From-To: open->feedback
 > State-Changed-By: rmind@NetBSD.org
 > State-Changed-When: Thu, 26 Jan 2012 19:19:34 +0000
 > State-Changed-Why:
 > Fixed?

 Yes!

 pullup to netbsd-5 too?

 -- 
 						Greg A. Woods
 						Planix, Inc.

 <woods@planix.com>       +1 250 762-7675        http://www.planix.com/

State-Changed-From-To: feedback->closed
State-Changed-By: rmind@NetBSD.org
State-Changed-When: Sat, 28 Jan 2012 12:36:48 +0000
State-Changed-Why:
Fixed, pull-up request made.


From: "Manuel Bouyer" <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/45827 CVS commit: [netbsd-5] src/sys/kern
Date: Sun, 5 Feb 2012 12:30:13 +0000

 Module Name:	src
 Committed By:	bouyer
 Date:		Sun Feb  5 12:30:13 UTC 2012

 Modified Files:
 	src/sys/kern [netbsd-5]: vfs_bio.c

 Log Message:
 Pull up following revision(s) (requested by rmind in ticket #1718):
 	sys/kern/vfs_bio.c: revision 1.233
 sysctl_dobuf: re-acquire the sysctl lock on retry path.  PR/45827.


 To generate a diff of this commit:
 cvs rdiff -u -r1.210 -r1.210.4.1 src/sys/kern/vfs_bio.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Manuel Bouyer" <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/45827 CVS commit: [netbsd-5-0] src/sys/kern
Date: Sun, 5 Feb 2012 12:30:33 +0000

 Module Name:	src
 Committed By:	bouyer
 Date:		Sun Feb  5 12:30:33 UTC 2012

 Modified Files:
 	src/sys/kern [netbsd-5-0]: vfs_bio.c

 Log Message:
 Pull up following revision(s) (requested by rmind in ticket #1718):
 	sys/kern/vfs_bio.c: revision 1.233
 sysctl_dobuf: re-acquire the sysctl lock on retry path.  PR/45827.


 To generate a diff of this commit:
 cvs rdiff -u -r1.210 -r1.210.6.1 src/sys/kern/vfs_bio.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Manuel Bouyer" <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/45827 CVS commit: [netbsd-5-1] src/sys/kern
Date: Sun, 5 Feb 2012 12:30:38 +0000

 Module Name:	src
 Committed By:	bouyer
 Date:		Sun Feb  5 12:30:38 UTC 2012

 Modified Files:
 	src/sys/kern [netbsd-5-1]: vfs_bio.c

 Log Message:
 Pull up following revision(s) (requested by rmind in ticket #1718):
 	sys/kern/vfs_bio.c: revision 1.233
 sysctl_dobuf: re-acquire the sysctl lock on retry path.  PR/45827.


 To generate a diff of this commit:
 cvs rdiff -u -r1.210 -r1.210.10.1 src/sys/kern/vfs_bio.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.51 2026/08/10 02:28:17 riastradh Exp $
$NetBSD: gnats_config.sh,v 1.10 2026/05/13 22:00:09 riastradh Exp $
Copyright © 1994-2026 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.