sysctl_dobuf: re-acquire the sysctl lock on retry path.  PR/45827.